# binder_rs

./: .gitignore  Cargo.toml
binder/: Cargo.toml
binder/src/: binder.rs  parcel.rs
binder/src/parcel/: parcelable.rs
binder_ndk/: Cargo.toml
binder_ndk_sys/: Cargo.toml  build.rs
binder_ndk_sys/src/: lib.rs
binder_tokio/: Cargo.toml
binder_tokio/src/: lib.rs
example/: Cargo.toml
example/src/: IRemoteService.rs  client.rs  main.rs  server.rs
tests/: Cargo.toml
tests/src/: main.rs
