[workspace]
members = [
    "binder_ndk",
    "binder_tokio",
    "binder_ndk_sys",
    "example",
    "tests",
]

exclude = ["target/*"]

[workspace.package]
edition = "2021"
version = "0.2.0"
authors = ["Android"]
rust-version = "1.80"
repository = "https://github.com/reigadegr/binder_rs"
readme = "./README.md"
description = "Rust bindings for Android's Binder IPC mechanism"
license = "Apache-2.0"
