[package]
name = "binder_ndk"

edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
libc = "0.2.169"
binder_ndk_sys = { path = "../binder_ndk_sys", version = "0" }
downcast-rs = "2.0.1"
