[package]
name = "binder_ndk"

edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
libc = "0.2.166"
binder_ndk_sys = { path = "../binder_ndk_sys", version = "0" }
downcast-rs = "1.2.1"

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
incremental = false
