[package]
name = "binder_ndk_sys"

edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
bindgen = "0.70.1"
anyhow = "1"

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
incremental = false
