[package]
name = "binder_tokio"

edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
binder = { package = "binder_ndk", path = "../binder", version = "0" }
smol = "2.0.2"
tokio = { version = "1.43.0", features = ["full"] }
tokio-runtime = "0.0.0"
